Update and Improve code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -900,6 +900,7 @@
     <string name="text_size">Text Size</string>
     <string name="style">Style</string>
     <string name="view_details">View details</string>
+    <string name="share_using">Share using</string>
     <string name="lorem_ipsum_paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
         Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of
         type and scrambled it to make a type specimen book. It has survived not only five centuries
